
VERSION 0.7.1cvs
================

2005-05-19  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/imap/IMAPFolder.cpp: fixed bug in subfolders enumeration.

 * examples/example6.cpp: enhanced 'example6' into an interactive program to
   show some of the features of the messaging module.

2005-05-15  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/serviceInfos.{hpp|cpp}: changed getAvailableProperties() to
   return 'serviceInfos::property' objects instead of strings. This permits
   setting service properties in a more generic manner.

2005-05-03  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/imap/IMAPFolder.cpp: fixed missing space in "STATUS" command +
   parsing error in 'status_info'.

2005-04-30  Vincent Richard  <vincent@vincent-richard.net>

 * utility/childProcess.{hpp|cpp}: added a 'childProcess' class to help
   with spawning child processes (used in 'sendmail' implementation).

2005-04-28  Stefan Uhrig  <stefanuhrig@gmx.net>

 * README.msvc: added guide describing how to compile VMime using
   Visual Studio .NET 2003

2005-04-27  Vincent Richard  <vincent@vincent-richard.net>

 * progressionListener.{hpp|cpp}: moved to 'vmime::utility' package since
   this can be of general use.

 * stream.{hpp|cpp}: added a bufferedStreamCopy() function which can
   take a 'progressionListener' parameter.

 * filteredStream.{hpp|cpp}: new feature added: filtered input and
   output streams.

 * Added 'sendmail' transport service for local delivery.

2005-04-19  Vincent Richard  <vincent@vincent-richard.net>

 * defaultParameter.cpp: fixed a bug in implementation of RFC-2231 (values
   were cut if longer than maxLineLength, and no line wrapping occured).

2005-04-15  Vincent Richard  <vincent@vincent-richard.net>

 * url.{hpp|cpp}, urlUtils.{hpp|cpp}: fixed a lot of bugs in URLs parsing
   and encoding/decoding + added unit tests.

2005-04-14  Vincent Richard  <vincent@vincent-richard.net>
